{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 104,
  "lineage": "4088ae5f-725a-7e38-a234-3f88f753622d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d870f2bcfaff0f63",
            "association_id": "eipassoc-0412151b6e7e9d191",
            "domain": "vpc",
            "id": "eipalloc-0d870f2bcfaff0f63",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0296a8da1f45ce20a",
            "private_dns": "ip-192-168-0-92.ap-southeast-1.compute.internal",
            "private_ip": "192.168.0.92",
            "public_dns": "ec2-13-251-52-37.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.52.37",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Creator": "TF-user",
              "Name": "nat-eip-2"
            },
            "tags_all": {
              "Creator": "TF-user",
              "Name": "nat-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.sample-igw-1",
            "aws_vpc.sample-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-svr-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f62d9254ca98e1aa",
            "arn": "arn:aws:ec2:ap-southeast-1:108628719108:instance/i-069fb104f2355783f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f2bb93b06c62c0eb",
                "volume_size": 1,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069fb104f2355783f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sample-pub-key-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0100e29a02e83413d",
            "private_dns": "ip-192-168-0-18.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.18",
            "public_ip": "13.215.155.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e0e03c4334d4a00",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-007b9b92d99c7662d",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-043572fe29f9bace3"
            ]
          },
          "dependencies": [
            "aws_key_pair.sample-pub-key-ec2",
            "aws_subnet.public-sub-1",
            "aws_vpc.sample-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sample-igw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108628719108:internet-gateway/igw-002008a184fe2a600",
            "id": "igw-002008a184fe2a600",
            "owner_id": "108628719108",
            "tags": {
              "Creator": "TF-user",
              "Name": "sample-igw-1"
            },
            "tags_all": {
              "Creator": "TF-user",
              "Name": "sample-igw-1"
            },
            "vpc_id": "vpc-04ab43387d308a25e"
          },
          "dependencies": [
            "aws_vpc.sample-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d870f2bcfaff0f63",
            "connectivity_type": "public",
            "id": "nat-0e46829e2601f5da8",
            "network_interface_id": "eni-0296a8da1f45ce20a",
            "private_ip": "192.168.0.92",
            "public_ip": "13.251.52.37",
            "subnet_id": "subnet-0e8de50e03453e12c",
            "tags": {
              "Creator": "TFuser",
              "Name": "nat-pub-sub-2"
            },
            "tags_all": {
              "Creator": "TFuser",
              "Name": "nat-pub-sub-2"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip-2",
            "aws_internet_gateway.sample-igw-1",
            "aws_subnet.public-sub-2",
            "aws_vpc.sample-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv-rt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108628719108:route-table/rtb-04172887cc23ede86",
            "id": "rtb-04172887cc23ede86",
            "owner_id": "108628719108",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e46829e2601f5da8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Creator": "TF-user",
              "Name": "prv-rt-1"
            },
            "tags_all": {
              "Creator": "TF-user",
              "Name": "prv-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ab43387d308a25e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip-2",
            "aws_internet_gateway.sample-igw-1",
            "aws_nat_gateway.nat-pub-sub-2",
            "aws_subnet.public-sub-2",
            "aws_vpc.sample-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108628719108:route-table/rtb-080dbe0b7966da2a9",
            "id": "rtb-080dbe0b7966da2a9",
            "owner_id": "108628719108",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-002008a184fe2a600",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Creator": "TF-user",
              "Name": "pub-rt-1"
            },
            "tags_all": {
              "Creator": "TF-user",
              "Name": "pub-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ab43387d308a25e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sample-igw-1",
            "aws_vpc.sample-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-a-prv-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8519a84afcc10de",
            "route_table_id": "rtb-04172887cc23ede86",
            "subnet_id": "subnet-0266abd579cf17b78"
          },
          "dependencies": [
            "aws_eip.nat-eip-2",
            "aws_internet_gateway.sample-igw-1",
            "aws_nat_gateway.nat-pub-sub-2",
            "aws_route_table.prv-rt-1",
            "aws_subnet.private-sub-1",
            "aws_subnet.public-sub-2",
            "aws_vpc.sample-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-a-prv-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ff69a4237900b2b",
            "route_table_id": "rtb-04172887cc23ede86",
            "subnet_id": "subnet-087ff48dae7eb8cb5"
          },
          "dependencies": [
            "aws_eip.nat-eip-2",
            "aws_internet_gateway.sample-igw-1",
            "aws_nat_gateway.nat-pub-sub-2",
            "aws_route_table.prv-rt-1",
            "aws_subnet.private-sub-2",
            "aws_subnet.public-sub-2",
            "aws_vpc.sample-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-a-pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007b00dcadd3e29ee",
            "route_table_id": "rtb-080dbe0b7966da2a9",
            "subnet_id": "subnet-007b9b92d99c7662d"
          },
          "dependencies": [
            "aws_internet_gateway.sample-igw-1",
            "aws_route_table.pub-rt-1",
            "aws_subnet.public-sub-1",
            "aws_vpc.sample-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-a-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0323fd94130ec79be",
            "route_table_id": "rtb-080dbe0b7966da2a9",
            "subnet_id": "subnet-0e8de50e03453e12c"
          },
          "dependencies": [
            "aws_internet_gateway.sample-igw-1",
            "aws_route_table.pub-rt-1",
            "aws_subnet.public-sub-2",
            "aws_vpc.sample-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108628719108:subnet/subnet-0266abd579cf17b78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0266abd579cf17b78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108628719108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "TF-user",
              "Name": "private-sub-1"
            },
            "tags_all": {
              "Creator": "TF-user",
              "Name": "private-sub-1"
            },
            "vpc_id": "vpc-04ab43387d308a25e"
          },
          "dependencies": [
            "aws_vpc.sample-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108628719108:subnet/subnet-087ff48dae7eb8cb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.0.96/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087ff48dae7eb8cb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108628719108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "TF-user",
              "Name": "private-sub-2"
            },
            "tags_all": {
              "Creator": "TF-user",
              "Name": "private-sub-2"
            },
            "vpc_id": "vpc-04ab43387d308a25e"
          },
          "dependencies": [
            "aws_vpc.sample-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108628719108:subnet/subnet-007b9b92d99c7662d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.0.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007b9b92d99c7662d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108628719108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "TF-user",
              "Name": "public-sub-1"
            },
            "tags_all": {
              "Creator": "TF-user",
              "Name": "public-sub-1"
            },
            "vpc_id": "vpc-04ab43387d308a25e"
          },
          "dependencies": [
            "aws_vpc.sample-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108628719108:subnet/subnet-0e8de50e03453e12c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.0.64/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8de50e03453e12c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108628719108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "TF-user",
              "Name": "public-sub-2"
            },
            "tags_all": {
              "Creator": "TF-user",
              "Name": "public-sub-2"
            },
            "vpc_id": "vpc-04ab43387d308a25e"
          },
          "dependencies": [
            "aws_vpc.sample-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sample-vpc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:108628719108:vpc/vpc-04ab43387d308a25e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-0f30ef0ef82426ae7",
            "default_route_table_id": "rtb-042034dc8399afc9f",
            "default_security_group_id": "sg-043572fe29f9bace3",
            "dhcp_options_id": "dopt-0c26964d2c5ef5775",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ab43387d308a25e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042034dc8399afc9f",
            "owner_id": "108628719108",
            "tags": {
              "Creator": "TF-user",
              "Name": "sample-vpc-01"
            },
            "tags_all": {
              "Creator": "TF-user",
              "Name": "sample-vpc-01"
            }
          }
        }
      ]
    }
  ]
}